deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: core
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:latest
          args:
            - -text="Hello, World!"
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: demoappsecret
