service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: core
spec:
  type: ClusterIP
  selector:
      app: echo
  ports:
    - name: http
      port: 8080
      targetPort: 5678
      protocol: TCP
